examples/error/hierachical_modelling/paraInlineParseError/error-GCC.errorOutput
submodel/Untergruppe.xml:59: Error: no declaration found for element 'scalarParameterERROR'
Hauptgruppe.xml:38: included from here
MBS.mbsim.xml:18: [ecount=1] included from here
MBS.mbsx:8: [ecount=1] included from here
